Fixed bug where help wouldn't load in jar